--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -71,16 +71,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_below="@id/LL_BotonesCancelarYVolver">
+        android:layout_below="@id/LL_BotonesCancelarYVolver"
+        android:orientation="vertical">
 
         <CheckBox
+            android:id="@+id/CB_Megusta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Me ha gustado el menu"/>
-        <CheckBox
-            android:layout_width="wrap_content"
+
+
+        <FrameLayout
+            android:id="@+id/FL_Opinion"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No me ha gustado el menu"/>
+            android:background="#B5B2B2"/>
 
 
     </LinearLayout>
